dts/testData/inspections/nodeContentOrder/InvalidProperty.dtsi
prop = "value";

name {};

<error descr="Properties should be defined before nodes">prop</error> = "value";